distorted css fixed

--- a/src/components/Searchbar/searchBar.css
+++ b/src/components/Searchbar/searchBar.css
@@ -11,7 +11,7 @@
 }
 
 .search input{
-	margin-top: .5rem;
+	margin-top: 1rem;
 	width: 480px;
 	height: 35px;
 	padding: 10px;
